# swapi

./: .gitignore  README.md  pyproject.toml
swapi_tests/: api_session.py
swapi_tests/model/: people.py  starships.py
swapi_tests/models/: people.py  starships.py
swapi_tests/utils/: constants.py
tests/: conftest.py  test_api.py  test_people.py  test_starships.py
